tests/typechecker/should_pass/module_with_one_argument.csp
module m1(z)
x=0
exports
y=1
endmodule
--instance im = m1(1)
--print im::y
